add performance tweaks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,5 @@
 [defaults]
-host_key_checking = True
+inventory = ./inventory
+forks = 50
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+pipelining = True
