reload systemd due to setcap changes

--- a/playbooks/roles/setup/tasks/tor.yaml
+++ b/playbooks/roles/setup/tasks/tor.yaml
@@ -72,5 +72,5 @@
   ansible.builtin.systemd:
     name: "tor@default"
     state: restarted
+    daemon_reload: yes
     enabled: yes
-    no_block: yes
