use ansible.builtin.apt_repository

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -19,7 +19,7 @@
   module_defaults:
     ansible.builtin.apt:
       state: latest
-      update_cache: yes
+      cache_valid_time: 600
     ansible.builtin.copy:
       owner: root
       group: root
