install gpg-agent to fetch Tor repo key

--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -12,6 +12,7 @@
     name:
       - apt-transport-https
       - gpg
+      - gpg-agent
       - unattended-upgrades
 
 - name: Configure auto upgrades
