--- a/playbooks/roles/info/tasks/clients.yaml
+++ b/playbooks/roles/info/tasks/clients.yaml
@@ -2,7 +2,7 @@
 
 - name: Get unique clients from {{ notice_log }}
   ansible.builtin.shell: |
-    /usr/bin/tac {{ notice_log }} {{ notice_log }}.1 | /usr/bin/grep -m 4 'unique clients.' | /usr/bin/tac
+    /usr/bin/tac {{ notice_log }} {{ notice_log }}.1 | /usr/bin/grep --text -m 4 -F ' unique clients.' | /usr/bin/tac
   register: result
 
 - name: result
