suppress  expected output for warn log

--- a/playbooks/roles/info/tasks/log-warn.yaml
+++ b/playbooks/roles/info/tasks/log-warn.yaml
@@ -8,3 +8,5 @@
 - name: results
   ansible.builtin.debug:
     msg: "{{ result.stdout.split('\n') }}"
+  when:
+    result.stdout_lines | length != 5
