--- a/playbooks/roles/info/tasks/uname.yaml
+++ b/playbooks/roles/info/tasks/uname.yaml
@@ -1,5 +1,9 @@
 ---
 
+- name: current date
+  debug:
+    msg: "{{ ansible_date_time.iso8601 }}"
+
 - name: Uname
   ansible.builtin.shell: |
     uname -rv
