add "uptaime" tag to "uname"

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -27,6 +27,7 @@
   ansible.builtin.import_tasks: uname.yaml
   tags:
     - uname
+    - uptime
 
 - name: Tor version
   ansible.builtin.import_tasks: version.yaml
