re-structure hosts in inventory

--- a/playbooks/bridgeline.yaml
+++ b/playbooks/bridgeline.yaml
@@ -2,8 +2,7 @@
 
 - name: 'Bridge Line'
   hosts:
-    - '!setup'
-    - deployed
+    - bridges
   strategy: free
   roles:
     - role: bridgeline
