--- a/site-bridgeline.yaml
+++ b/site-bridgeline.yaml
@@ -1,4 +1,4 @@
-#!/usr/bin/env -S ansible-playbook -e @secrets/local.yaml
+#!/usr/bin/env -S ansible-playbook -e @secrets/local.yaml -i inventory/public.yaml 
 
 ---
 
