pin python3 path and activaze compression and more for ssh

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory
 forks = 50
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+interpreter_python = /usr/bin/python3
 pipelining = True
+ssh_args = -C -o IdentitiesOnly=yes -o StrictHostKeyChecking=accept-new -o AddressFamily=inet -o Compression=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o Protocol=2 -o ServerAliveInterval=60s
