no date for "uname"

--- a/playbooks/roles/info/tasks/uname.yaml
+++ b/playbooks/roles/info/tasks/uname.yaml
@@ -2,9 +2,8 @@
 
 - name: Uname
   ansible.builtin.shell: |
-    date
     uname -rv
-    uptime
+    uptime -ps
   register: result
 
 - name: result
