--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -7,6 +7,7 @@ log_lines: 10
 
 public_ip: "{{ ansible_eth0.ipv4.address }}"
 or_port: "{{ range(1024, 65535) | random(seed=ansible_hostname + public_ip + seed_or_port) }}"
+apt_upgrade_time: "{{ 24 | random(seed=ansible_hostname) }}"
 
 torrc_generic:
   - name: 'Log notice file'
