--- a/playbooks/roles/info/tasks/log-unattended.yaml
+++ b/playbooks/roles/info/tasks/log-unattended.yaml
@@ -2,6 +2,7 @@
 
 - name: Get last {{ log_lines }} lines from {{ unattended_log }}
   ansible.builtin.shell: |
+    tac {{ unattended_log }} | grep -m 1 '^Log started:' || true
     /usr/bin/tail -n {{ log_lines }} {{ unattended_log }} || true
   register: result
 
