refactor variable scope

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -3,9 +3,7 @@
 notice_log: '/var/log/tor/notice.log'
 warn_log: '/var/log/tor/warn.log'
 
-public_ip: "{{ ansible_eth0.ipv4.address }}"
-or_port: "{{ range(1024, 65535) | random(seed=ansible_hostname + public_ip + seed_or_port) }}"
-apt_upgrade_time: "{{ 24 | random(seed=ansible_hostname) }}"
+or_port: "{{ range(1024, 65535) | random(seed=ansible_hostname + ansible_eth0.ipv4.address + seed_or_port) }}"
 
 torrc_generic:
   - name: 'Log notice file'
