--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -14,7 +14,9 @@
     - name: Hint
       ansible.builtin.import_tasks: hint.yaml
       tags:
+        - never
         - hint
+        - tor
 
     - name: Reboot
       ansible.builtin.import_tasks: reboot.yaml
