--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -39,10 +39,12 @@
     src: timer.j2
     dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
     mode: 0644
+  register: upgrade_timer_state
 
 - name: Activate unattended upgrades time
   ansible.builtin.shell: |
     systemctl restart apt-daily.timer
+  when: upgrade_timer_state.changed
 
 - name: Cleanup
   ansible.builtin.apt:
