--- a/site-private-setup.yaml
+++ b/site-private-setup.yaml
@@ -1,4 +1,5 @@
 #!/usr/bin/env -S ansible-playbook -e @secrets/local.yaml -i inventory/private.yaml
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
 
