--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -9,19 +9,25 @@
   ansible.builtin.import_tasks: log-notice.yaml
   tags:
     - log
-    - log_notice
+    - log-notice
 
 - name: Log warn
   ansible.builtin.import_tasks: log-warn.yaml
   tags:
     - log
-    - log_warn
+    - log-warn
 
 - name: Log unattended
   ansible.builtin.import_tasks: log-unattended.yaml
   tags:
     - log
-    - log_unattended
+    - log-unattended
+
+- name: Log system
+  ansible.builtin.import_tasks: log-system.yaml
+  tags:
+    - log
+    - log-system
 
 - name: Uname
   ansible.builtin.import_tasks: uname.yaml
