fix timer config + move sysctl Tor tweaks

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -6,6 +6,11 @@
       tags:
         - system
 
+    - name: Upgrade
+      ansible.builtin.import_tasks: upgrade.yaml
+      tags:
+        - upgrade
+
     - name: Tor
       ansible.builtin.import_tasks: tor.yaml
       tags:
