refactor accordingly to have 3 host groups: public, private and special

--- a/playbooks/setup.yaml
+++ b/playbooks/setup.yaml
@@ -2,8 +2,8 @@
 
 - name: 'Setup'
   hosts:
-    - bridges
-    - ! special
+    - all
+    - '!special'
   strategy: free
   roles:
     - role: setup
