fix format of nusenu's file

--- a/playbooks/roles/setup/tasks/hint.yaml
+++ b/playbooks/roles/setup/tasks/hint.yaml
@@ -8,4 +8,5 @@
   ansible.builtin.debug:
     msg:
       - "Add to ./public_html/.well-known/tor-relay/hashed-bridge-rsa-fingerprint.txt :"
-      - "# {{ ansible_hostname }} {{ hashed_fingerprint }}"
+      - "# {{ ansible_hostname }}"
+      - "{{ hashed_fingerprint }}"
