split uptime and uname

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -33,6 +33,10 @@
   ansible.builtin.import_tasks: uname.yaml
   tags:
     - uname
+
+- name: Uptime
+  ansible.builtin.import_tasks: uptime.yaml
+  tags:
     - uptime
 
 - name: Tor version
