--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -27,6 +27,12 @@
       tags:
         - reboot
 
+    - name: Restart
+      ansible.builtin.import_tasks: restart.yaml
+      tags:
+        - never
+        - restart
+
   module_defaults:
     ansible.builtin.apt:
       state: latest
