--- a/playbooks/roles/setup/tasks/reboot.yaml
+++ b/playbooks/roles/setup/tasks/reboot.yaml
@@ -17,4 +17,4 @@
     pre_reboot_delay: 0
     post_reboot_delay: 30
     test_command: uptime
-  when: not result.stdout | regex_search(ansible_facts.packages['linux-image-amd64'][0].version)
+  when: force_reboot or not result.stdout | regex_search(ansible_facts.packages['linux-image-amd64'][0].version)
