--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,3 @@
-# top-most EditorConfig file
-root = true
-
-# Unix-style newlines with a newline ending every file
-# Maximum line length is not forced, because it depends on the use case
 [*]
 charset = utf-8
 end_of_line = lf
@@ -10,3 +5,6 @@ insert_final_newline = true
 indent_size = 2
 indent_style = space
 trim_trailing_whitespace = true
+
+[*.py]
+indent_size = 4
