--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,5 @@ forks = 25
 interpreter_python = /usr/bin/python3
 pipelining = True
 ssh_args = -C -o IdentitiesOnly=yes -o StrictHostKeyChecking=accept-new -o AddressFamily=inet -o Compression=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o Protocol=2 -o ServerAliveInterval=60s
+gather_subset = !all
+gather_timeout = 20
