cache ansible facts

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,15 @@
 [defaults]
-forks = 25
 interpreter_python = /usr/bin/python3
-pipelining = True
 ssh_args = -C -o IdentitiesOnly=yes -o StrictHostKeyChecking=accept-new -o AddressFamily=inet -o Compression=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o Protocol=2 -o ServerAliveInterval=60s
+
+forks = 25
+pipelining = True
+poll_interval = 5
+
+fact_caching = jsonfile
+fact_caching_connection = ./.ansible_facts
+fact_caching_timeout = 86400
+
+gathering = smart
 gather_subset = !all
 gather_timeout = 20
