refactor a deprecated feature

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -1,5 +1,11 @@
 ---
 
+- name: Set defaults
+  ansible.builtin.setup:
+    gather_subset:
+      - '!all'
+    gather_timeout: 20
+
 - name: Clients
   ansible.builtin.import_tasks: clients.yaml
   tags:
