--- a/playbooks/roles/setup/files/20-tor.conf
+++ b/playbooks/roles/setup/files/20-tor.conf
@@ -1,13 +1,18 @@
-# https://support.torproject.org/relay-operators/relay-bridge-overloaded/
+# DDoS
 #
-net.ipv4.ip_local_port_range = 4000 64000
 
-#
+net.ipv4.tcp_syncookies = 1
+net.ipv4.tcp_max_syn_backlog = 65535
+net.core.somaxconn = 65535
+
 # https://kernsec.org/wiki/index.php/Kernel_Self_Protection_Project#CONFIGs
 #
 
 # Try to keep kernel address exposures out of various /proc files (kallsyms, modules, etc).
 kernel.kptr_restrict = 1
+
+# Block non-uid-0 profiling (needs distro patch, otherwise this is the same as "= 2")
+kernel.perf_event_paranoid = 3
 
 # Turn off kexec, even if it's built in.
 kernel.kexec_load_disabled = 1
@@ -17,6 +22,9 @@ kernel.yama.ptrace_scope = 1
 
 # Disable User Namespaces, as it opens up a large attack surface to unprivileged users.
 user.max_user_namespaces = 0
+
+# Turn off unprivileged eBPF access.
+kernel.unprivileged_bpf_disabled = 1
 
 # Turn on BPF JIT hardening, if the JIT is enabled.
 net.core.bpf_jit_harden = 2
