--- a/playbooks/roles/bridgeline/tasks/main.yaml
+++ b/playbooks/roles/bridgeline/tasks/main.yaml
@@ -1,5 +1,12 @@
 ---
 
+- name: Ansible defaults
+  ansible.builtin.setup:
+    gather_subset:
+      - '!all'
+      - 'all_ipv4_addresses'
+    gather_timeout: 20
+
 - name: Get fingerprint
   ansible.builtin.shell: |
     cut -f2 -d' ' /var/lib/tor/fingerprint
