--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -3,7 +3,7 @@
 log_notice: '/var/log/tor/notice.log'
 log_warn: '/var/log/tor/warn.log'
 
-or_port: "{{ or_port | default(range(1024, 65535) | random(seed=ansible_hostname + ansible_eth0.ipv4.address + seed_or_port) }})"
+or_port: or_port | default(range(1024, 65535) | random(seed=ansible_hostname + ansible_eth0.ipv4.address + seed_or_port)
 
 torrc_generic:
   - name: 'Log notice file'
