fix linter: role-name

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -51,8 +51,8 @@
   tags:
     - version
 
-- name: _lib/hashed-fingerprint
-  ansible.builtin.import_tasks: ../../_lib/hashed-fingerprint.yaml
+- name: lib/hashed-fingerprint
+  ansible.builtin.import_tasks: ../../lib/hashed-fingerprint.yaml
   tags:
     - bto
     - onionoo
