--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -51,7 +51,7 @@
   tags:
     - version
 
-- name: lib/hashed-fingerprint
+- name: Import hashed-fingerprint
   ansible.builtin.import_tasks: ../../lib/hashed-fingerprint.yaml
   tags:
     - bto
