--- a/playbooks/roles/info/tasks/log-notice.yaml
+++ b/playbooks/roles/info/tasks/log-notice.yaml
@@ -5,6 +5,6 @@
     /usr/bin/tail -n {{ log_lines }} {{ log_notice }}
   register: result
 
-- name: results
+- name: Results
   ansible.builtin.debug:
     msg: "{{ result.stdout.split('\n') }}"
