--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -5,7 +5,7 @@
     zgrep -e 'BUG:' -e 'Call Trace:' -e 'oom-killer' -e 'RIP:' -e 'WARNING:' {{ log_system }}* | grep -v 'ansible-ansible.legacy.command:' | head -n {{ log_lines }}
   register: result
 
-- name: results
+- name: Results
   ansible.builtin.debug:
     msg: "{{ result.stdout.split('\n') }}"
   when:
