--- a/playbooks/roles/info/tasks/log-warn.yaml
+++ b/playbooks/roles/info/tasks/log-warn.yaml
@@ -5,7 +5,7 @@
     /usr/bin/tail -n {{ log_lines }} {{ log_warn }} {{ log_warn }}.1 2>/dev/null || true
   register: result
 
-- name: results
+- name: Results
   ansible.builtin.debug:
     msg: "{{ result.stdout.split('\n') }}"
   when:
