--- a/playbooks/roles/info/tasks/version.yaml
+++ b/playbooks/roles/info/tasks/version.yaml
@@ -5,6 +5,7 @@
     manager: auto
 
 - name: Tor version
+  changed_when: false
   ansible.builtin.shell: |
     tor --version | grep -m 1 ^Tor
   register: result
