--- a/playbooks/roles/bridgeline/tasks/main.yaml
+++ b/playbooks/roles/bridgeline/tasks/main.yaml
@@ -8,6 +8,7 @@
     gather_timeout: 20
 
 - name: Get fingerprint
+  changed_when: false
   ansible.builtin.shell: |
     cut -f2 -d' ' /var/lib/tor/fingerprint
   register: result
@@ -17,6 +18,7 @@
     fp: "{{ result.stdout.split('\n')[0] }}"
 
 - name: Get certificate
+  changed_when: false
   ansible.builtin.shell: |
     grep -Eo 'cert=\S+' /var/lib/tor/pt_state/obfs4_bridgeline.txt
   register: result
