--- a/playbooks/roles/info/tasks/log-notice.yaml
+++ b/playbooks/roles/info/tasks/log-notice.yaml
@@ -1,6 +1,7 @@
 ---
 
 - name: Get last {{ log_lines }} lines from {{ log_notice }}
+  changed_when: false
   ansible.builtin.shell: |
     /usr/bin/tail -n {{ log_lines }} {{ log_notice }}
   register: result
