--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -1,6 +1,7 @@
 ---
 
 - name: Grep {{ log_system }}
+  changed_when: false
   ansible.builtin.shell: |
     zgrep -e 'BUG:' -e 'Call Trace:' -e 'oom-killer' -e 'RIP:' -e 'WARNING:' {{ log_system }}* | grep -v 'ansible-ansible.legacy.command:' | head -n {{ log_lines }}
   register: result
