--- a/playbooks/roles/info/tasks/log-unattended.yaml
+++ b/playbooks/roles/info/tasks/log-unattended.yaml
@@ -1,6 +1,7 @@
 ---
 
 - name: Get last {{ log_lines }} lines from {{ log_unattended }}
+  changed_when: false
   ansible.builtin.shell: |
     grep -v -e 'Reading database' -e '^$' {{ log_unattended }} | tail -n {{ log_lines }}
   register: result
