--- a/playbooks/roles/info/tasks/log-warn.yaml
+++ b/playbooks/roles/info/tasks/log-warn.yaml
@@ -1,6 +1,7 @@
 ---
 
 - name: Get last {{ log_lines }} lines from {{ log_warn }}
+  changed_when: false
   ansible.builtin.shell: |
     /usr/bin/tail -n {{ log_lines }} {{ log_warn }} {{ log_warn }}.1 2>/dev/null || true
   register: result
